<resources>
    <string name="app_name">Capstone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="round">Round</string>
    <string name="victory_points">Victory Points:</string>
    <string name="command_points">Command Points:</string>
    <string name="abilities">abilities</string>
    <string name="abilitie_name">abilitie name</string>
    <string name="add_armyname">Enter your army name</string>
    <string name="add_allience">Enter your army Alliegence</string>
    <string name="units">units</string>
    <string name="battleline">battleline units</string>
    <string name="heroes">heroes</string>
    <string name="behemoths">behemoths</string>
    <string name="artillery">artillery</string>

    <string name="add_armyList">Add army to list</string>
    <string name="create_army">Create new Army list</string>
    <string name="not_valid">entry was not valid please try again</string>

</resources>