<?xml version="1.0" encoding="utf-8"?>
<!--    <scrollView-->
<!--        android:layout_width="405dp"-->
<!--        android:layout_height="484dp"-->
<!--        android:layout_marginBottom="6dp">-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddArmylistFragment">




    <EditText
        android:id="@+id/txtBattleline"
        android:layout_width="345dp"
        android:layout_height="101dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/battleline"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeroes" />


    <EditText
        android:id="@+id/txtunits"
        android:layout_width="347dp"
        android:layout_height="106dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/units"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBattleline" />

    <EditText
        android:id="@+id/txtHeroes"
        android:layout_width="347dp"
        android:layout_height="105dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/heroes"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputarmyname" />




    <Button
        android:id="@+id/btnAddArmylist"
        android:layout_width="338dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_armyList"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="363dp"
        android:layout_height="67dp"
        android:padding="16dp"
        android:text="@string/create_army"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputarmyname"
        android:layout_width="355dp"
        android:layout_height="74dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtArmyName"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/add_armyname"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
<!--   </scrollView>-->

